--- a/Finance_FAQ.Rmd
+++ b/Finance_FAQ.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Untitled"
+title: "JHSPH Student Finance FAQ"
 author: "John Muschelli"
-date: "September 15, 2015"
+date: '`r Sys.Date()`'
 output:
   html_document:
     includes:
@@ -18,9 +18,18 @@ output:
     highlight.chooser: TRUE
 ```
 
-
-# FAQs
 These represent some frequently asked questions (FAQs) or important links to understand your pay.  
+
+## General Recommendations
+
+Many of the aspects of payroll are not automated and mistakes for miscommunication definitely do occur. Although this is not ideal and it may not seem to be the responsibility of the student, I highly recommend you check your bank accounts frequently and check your pay stubs at least once a month.   This will hopefully result in prompt and readily resolution of your problems.  
+
+### Times of most mix-ups
+During academic times during the year, our department says you can work up to 19 hours per week.  If you are on a training grant, that may cover 5 hours per week, thus totaling 14 hours available to work per week.
+
+During nonacademic time such as the summer and winter sessions you can work up to 40 hours per week depending on your training grant or funding situation. As such, positions and payments change frequently during the beginning of the summer the end of the summer beginning of winter session and the end of winter session.  Therefore, you must be vigilant during these times and take extra note of your pay and hours.
+
+
 
 ```{r, echo=FALSE, results='asis'}
 library(htmltools)
@@ -32,15 +41,14 @@ func = function(id, title, inner = FALSE){
                     <a data-toggle="collapse" data-parent="#accordion" href="', id_no, '">', title, '</a>
                 </h4>
             </div>
-            <div id="', id, '" class="panel-collapse collapse', ifelse(inner, "in", ""), '>
+            <div id="', id, '" class="panel-collapse collapse ', ifelse(inner, "in", ""), '">
                 <div class="panel-body">
                     ')
   HTML(b)
 }
 ender = HTML('</div> </div> </div>')
 start = HTML('<div class="bs-example">
-    <div class="panel-group" id="accordion">
-        <div class="panel panel-default">')
+    <div class="panel-group" id="accordion">')
 end = HTML('</div> </div>')
 start
 ```
@@ -48,10 +56,9 @@ start
 
 ```{r, echo=FALSE, results='asis'}
 library(htmltools)
-func(id = "payroll1", 
-     title = "1.  Where is my payroll information? ", 
-     inner = TRUE)
 ```
+
+`r func(id = "payroll", title = "1.  Where is my payroll information? ", inner = TRUE)`
 
 - Go to [http://ess.johnshopkins.edu/](http://ess.johnshopkins.edu/) and see the following page, and click "Login": 
 <div style="width:200px; height=200px">
@@ -63,21 +70,37 @@ func(id = "payroll1",
 `r ender`
 
 
-`r func(id = "payroll2", title = "2.  How do I change my number of dependencies/exemptions?", inner = FALSE)`
+`r func(id = "exempt", title = "2.  How do I change my number of dependencies/exemptions?")`
 
 A [W-4 form](http://www.irs.gov/pub/irs-pdf/fw4.pdf) describes the number of dependencies/exemptions you have.  This is important because payroll will tax you differently depending on the number of dependencies.  Dependencies are most commonly children, but you may have other exemptions.  
 
-First, go to your payroll information as described [here](#payroll1).  Then 
+First, go to your payroll information as described [here](#payroll).  Then 
 
 - Click "Federal and State Withholding"
 - Change Exemptions
 
 `r ender`
 
-`r end`
+`r func(id = "paystubs", title = "3.  Where are my pay stubs?")`
+
+First, go to your payroll information as described [here](#payroll).  Then 
+
+- Click "Pay Statements"
+
+`r ender`
+
+`r func(id = "direct_deposit", title = "4.  How can I do direct deposit?")`
+
+First, go to your payroll information as described [here](#payroll).  Then 
+
+- Click "Direct Deposit"
+- Google "BANK NAME" and "routing number", depending on your bank
+- Account number is YOUR SPECIFIC Bank account number (usually what you use to login)
+
+`r ender`
 
 
-3.  
+`r func(id = "where_info", title = "5.  How do I remember where to find this info?")`
 
 - Go to [my.jhu.edu](https://my.jh.edu/portal/web/jhupub/), and click "Login with JHED"
 - Type in your JHED information
@@ -86,59 +109,86 @@ First, go to your payroll information as described [here](#payroll1).  Then
 ![ESS Tab](http://i.imgur.com/txt2N49.png)
 
 
-W-4 
-ESS in general
-Salary vs. Hourly Pay
-1.  ESS
-2.  Salary pay
-  - 10 hours per week
-  - specific project 
-  - for 6 months (or could be unspecified)
-  - rate
-  - The same pay rate but different METHOD - hourly vs. salary
-    - calculated on semi-monthly pay and goes by payroll cutoffs
-    - if not taken off that position, then will continue
-        - may be WRONG and overpaid
-3.  Hourly Pay
-  - must be submitted
-  - paid through hourly system
-  - CATS system 
-  - the dates are different for the payroll cutoffs
-    - 
-Where is chart online/
-When it's 
-[W-2](http://finance.jhu.edu/depts/tax/prtaxt.html)
+`r ender`
 
-http://ssc.jhmi.edu/hr_payroll/DataFiles_HR_Payroll/2015_jhu-semi.pdf
+`r func(id = "w2", title = "6. Where do I get my W-2 for taxes?")`
 
-http://ssc.jhmi.edu/hr_payroll/deadlines.html
+- Go to [my.jhu.edu](https://my.jh.edu/portal/web/jhupub/), and click "Login with JHED"
+- Type in your JHED information
+- On the left hand side, you should see a tab named "HR", and click "w2eXpress" or go directly to [https://login.johnshopkins.edu/w2/](https://login.johnshopkins.edu/w2/)
+- Select "Johns Hopkins University"
+  - if you have not enrolled, then you must enroll
+  - if you have enrolled, go to "Get Your 20XX Tax Form Now"
 
-   
-
-JHU Weekly - union
-JHU Semi-Monthly - Most JHSPH people (all students, faculty)
-  - fixed number of hours
-  hourly rate - how much you get paid per hour (can be different per project)
-  hourly position 
-    - salary or hourly 
-    - have different pay periods
-JHHS Biweekly - hospital people
-</div>
-</div>
-University formula
-  - Salary
-    - # hours/week  * wage per hour * 52 weeks /24 pay periods =
-    10*25*52/24  = 541.6667
-  - hourly
-    - not each semi-monthly pay period has the same number of "weeks" in it, so even with the same number of hours in each week, you can get different payments depending on the month breakdown.
-    - 10*25*52/26 = 500
-  - why is this?  Problem is that months are different numbers of days and we choose to do 2 payments per month - numerator doesn't fit evenly into denominator
-    - but overall pay is the same.
+`r ender`
 
 
-CHECK your pay at
-1) The beginning of the summer
-2) The end of the summer
-3) Winter session
+`r func(id = "payday", title = "7. When do I get paid?")`
+
+First off, go to [http://ssc.jhmi.edu/hr_payroll/deadlines.html](http://ssc.jhmi.edu/hr_payroll/deadlines.html) to know when pay periods occur.  There should be the current year and 3 choices:
+
+- JHU Weekly - these are union workers - not YOU
+- *JHU Semi-Monthly* - Most JHSPH people (all students, faculty) - this *IS YOU*
+- JHHS Biweekly - these are hospital workers
+
+For 2015, the list is [here](http://ssc.jhmi.edu/hr_payroll/DataFiles_HR_Payroll/2015_jhu-semi.pdf
+),  The column *PAYDAY* is when *WHEN YOU ARE GOING TO GET PAID*.  Depending on direct deposit, you may get the money a day early.  
+
+
+`r ender`
+
+`r func(id = "payday", title = "8. What's the difference between hourly and salary payments?")`
+
+This is one of the most confusing concepts.  Most importantly, at the end of the year *YOU WILL GET THE SAME AMOUNT OF MONEY* if you work the same number of hours at a fixed rate.  
+
+Let's first define some terms.  You will have an hourly *rate* (or *wage*) which is how much money you are paid per hour.   I will call hourly vs. salary a payment *schedule*.   The pay *period* is when you get paid - which is semi-monthly (twice per month), see the [payday section](#payday) for those dates. 
+
+### Salary Schedule
+Let's say you work 10 hours per week on a *salary schedule* and your rate is *$25/hour*.  Then, the money you will get per each period 
+$$
+Number of hours/week × wage per hour × 52 weeks / 24 pay periods 
+$$
+$$
+10 hours /week *\$25/hour*52 weeks/24 pay period = \$541.6667 per pay period
+$$
+
+With a *salary* schedule, you have a fixed number of hours per week and you will be paid the same from this position each pay period.  Note, in the [payday section](#payday), the start and end dates for *salary* pay coincide with the *PAYDAY*.  There is only $24$ "half-months" in a year, so there are only 24 pay periods.  Also note that you make 
+$$
+10 hours /week *\$25/hour*52 weeks = \$13000
+$$
+in total that year.   Once you are done a position, *YOU MUST TELL YOUR PAYROLL PERSON*,  otherwise they may still pay you for that position and you *will have to pay that money back*! Do not just tell them verbally also get it in writing in e-mail or paper.
+
+### Hourly Schedule
+With an *hourly* schedule, you must submit time sheets per pay period (or week, depending on the job) and you be paid depending on how many hours worked.  The confusing part is that you may not be paid the same from this position each pay period *EVEN IF YOU WORK THE SAME NUMBER OF HOURS*.  Why?  In the [payday section](#payday), the start and end dates for *hourly* pay do not directly coincide with the *PAYDAY*.  Thus, different number of days are in different pay periods (months are not all even 30 days).  
+
+Again, let's say you work 10 hours per week on an *hourly schedule* and your rate is *$25/hour*.  Then, the money you will get per each period 
+$$
+Number of hours/week × wage per hour × 52 weeks / 26 weeks 
+$$
+$$
+10 hours /week *\$25/hour*52 weeks/26 pay period = \$500 per WEEK
+$$
+But again, depending on how that week falls, it may be above or below \$500. 
+
+The denominator is only $26$, because it is calculated on every 2 weeks and there are $52$ weeks in the year.  Note that you *STILL* make 
+$$
+10 hours /week *\$25/hour*52 weeks = \$13000
+$$
+in total that year if you worked 10 hours each week.   Once you are done a position, you will no longer log hours, and so no payment will be received.  Therefore, you do not have to necessarily tell your payroll person, though I recommend it.
+
+
+`r ender`
+
+`r func(id = "payday", title = "8. Can you have different wages/rates for different jobs?")`
+
+Yes.  Each position (work for person A and person B) can have a different wage/rate.  Ask about this before you start to get paid to expect how much money you wil receive.
+
+`r ender`
+
+
+`r end`
+
+
+
 
 
